--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "paths": {
+      "ngx-mono": [
+        "dist/ngx-mono/ngx-mono",
+        "dist/ngx-mono"
+      ]
+    },
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
